--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".screens.MainActivity"
-        android:theme="@style/AppTheme.NoActionBar">
+        <activity
+                android:name=".screens.movielist.MovieListActivity"
+                android:label="@string/title_activity_movie_list"
+                android:parentActivityName=".screens.MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.stameni.com.whatshouldiwatch.screens.MainActivity"/>
+        </activity>
+        <activity
+                android:name=".screens.MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
