--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,9 +89,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
-    //GifImageView
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 
-    //CollapsingToolbarFlick
-    implementation 'com.github.VyacheslavShmakin:gp-collapsing-toolbar:1.0.1'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
