--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
+    //ProgressBarCustom
+    implementation 'com.pollux:dualprogressview:0.0.1'
 
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    //RxBinding
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
 }
