--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
 
+    //Preferences
+    implementation 'androidx.preference:preference:1.1.0-beta01'
+
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
@@ -94,4 +97,7 @@ dependencies {
 
     //RxBinding
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
+
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
