--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,14 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".screens.splash.SplashScreenActivity" android:theme="@style/SplashScreenTheme">
+        <activity
+                android:name=".screens.settings.about.AboutUsActivity"
+                android:label="@string/title_activity_about_us"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".screens.splash.SplashScreenActivity"
+                android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
