--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,12 @@ apply plugin: "kotlin-kapt"
 
 apply plugin: 'androidx.navigation.safeargs'
 
+apply plugin: 'com.google.gms.google-services'
+
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
+
+
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -116,4 +122,10 @@ dependencies {
 
     //CSV
     implementation "com.opencsv:opencsv:4.0"
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+
+    // Add the Firebase SDK for Crashlytics.
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
 }
