--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,8 +105,8 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     //Nav
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha05"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha05"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
