--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
-    ext.room_version = '2.1.0-alpha06'
+    ext.kotlin_version = '1.7.0'
+    ext.room_version = '2.6.1'
     ext.navigation_version = '1.0.0'
     ext.kodein_version = '5.2.0'
     ext.lifecycle_version = '2.0.0'
     ext.retrofit_version = '2.4.0'
-    ext.dagger2_version = '2.17'
+    ext.dagger_version = '2.51.1'
     ext.nav_version = "1.0.0"
     repositories {
         google()
@@ -15,14 +15,14 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7'
 
         //Google services
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.4.2'
         // Add the Crashlytics Gradle plugin.
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta03'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
