--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-//apply plugin: 'kotlin-android-extensions'
-
 apply plugin: "kotlin-kapt"
 
 apply plugin: 'androidx.navigation.safeargs'
@@ -33,6 +31,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     kotlinOptions {
